--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="nav-body">
             <ul class="ul-nav">
                 <li class="nav-link">
-                    <a href="#">Home</a>
+                    <a href="#">home</a>
                 </li>
                 <li class="nav-link">
                     <a href="#">Listing</a>
